--- a/scss/theme/_header.scss
+++ b/scss/theme/_header.scss
@@ -1,142 +1,167 @@
-.default-header {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	z-index: 9;
-	.right-bar {
-		position: relative;
-	}
-	nav {
-		.main-menu {
-			@include media-breakpoint-down (sm) {
-				display: none;
-			}
-			@include flexbox();
-			@include align-items(center);
-			a {
-				display: inline-block;
-				color: rgba($white, .5);
-				margin: 0 20px;
-				text-transform: uppercase;
-				font-size: 12px;
-				@include media-breakpoint-down(md) {
-					margin: 0 5px;
-				}
-				&:hover {
-					color: $primary-color;
-				}
-			}
-		}
-		.mobile-btn {
-			display: none;
-			font-size: 36px;
-			color: rgba($white, .5);
-		}
-	}
-	@include media-breakpoint-down (sm) {
-		.main-menu {
-			@include flex-direction(column);
-			position: absolute;
-			top: 40px;
-			right: 0;
-			background: #4a4fad;
-			padding: 30px 20px;
-			a {
-				margin: 5px 20px !important;
-			}
-		}
-		.mobile-btn {
-			display: block !important;
-			font-size: 36px !important;
-			position: absolute;
-			top: 0;
-			right: 0;
-		}
-	}
+.bg-nav{
+    width: 100%;
+    max-height: 70%;
+    z-index: 1000;   
+    transition: 0.3s;
 }
-.sticky-header {
-	padding: 15px 0;
-
+.btnlink {
+    background: none;
+    border-style: none;
+    color: #FFFFFF;
+    font-size: 1.15em;
+    margin: 0;
+    padding: 0;
 }
-.is-sticky {
-	.sticky-header {
-		background: -moz-linear-gradient(left, rgba(60,64,143,.95) 0%, rgba(91,97,207,.95) 100%);
-		background: -webkit-linear-gradient(left, rgba(60,64,143,.95) 0%,rgba(91,97,207,.95) 100%);
-		background: linear-gradient(to right, rgba(60,64,143,.95) 0%,rgba(91,97,207,.95) 100%);
-	}
+.btnlink:hover{
+    color: #00AEA5 !important;
+    text-decoration: underline;
 }
-.search {
-	span {
-		color: $white;
-	}
-	padding: 6px 20px;
-	border-right: 1px solid rgba($white, .5);
-	cursor: pointer;
-	&:hover {
-		.search-field {
-			transform: scaleY(1) !important;
-		}
-	}
-	@include media-breakpoint-down (sm) {
-		margin-right: 60px;
-	}
-
-}
-.search-field {
-	transform: scaleY(0);
-	@include transition();
-	&:hover {
-		transform: scaleY(1) !important;
-	}
-	position: absolute;
-	top: -13px;
-	right: -2px;
-	input {
-		line-height: 60px;
-		background: #4a4fad;
-		width: 600px;
-		border: none;
-		color: $white;
-		padding: 0 70px 0 25px;
-		font-weight: 400;
-		@include media-breakpoint-down(md) {
-			width: 400px;
-		}
-		@include media-breakpoint-down(sm) {
-			width: 300px;
-		}
-		@include media-breakpoint-down(xs) {
-			width: 200px;
-		}
-	}
-	.search-submit {
-		span {
-			color: $white;
-		}
-		width: 60px;
-		height: 60px;
-		border: none;
-		background: transparent;
-		cursor: pointer;
-		position: absolute;
-		top: 0;
-		right: 0;
-	}
+.dropdown-menu{
+    background: #00AEA5 !important;
 }
 
-.header-social {
-	@include media-breakpoint-down(sm) {
-		display: none !important;
-	}
-	margin-left: 20px;
-	a {
-		margin: 0 5px;
-		padding: 0 5px;
-		display: inline-block;
-		color: rgba($white, .5);
-		&:hover {
-			color: $primary-color;
-		}
-	}
+.dropdown-menu li a:hover{
+    background-color: #00AEA5;
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+.dropdown-toggle{
+    visibility: visible;
+}
+.ham{
+    visibility: hidden;
+}
+.iconNav{
+    margin-top: -0.25em;
+}
+.menu{
+    background-color: #2E2D2C;    
+} 
+#menu{
+    margin-top: 0.7em;
+}
+.nav-link:hover{
+    color: #00AEA5 !important;
+    text-decoration: underline;
+}
+.link7:hover{
+    dropdown-menu{
+        visibility: visible;
+    }
+}
+.standard-menu ul li{
+    display: inline-block;
+    padding: 0 0 0 0; /*1em*/
+    line-height: .5em; 
+}
+.standard-menu ul li a{
+    font-family:'Montserrat';
+    color: #FFFFFF;
+    font-size: 1.15em;
+}
+.submenu{
+    color: #FFFFFF !important; 
+}
+
+/*For mobile menu*/
+.main-menu{width: 100%; height: 100%; opacity: 0; visibility: hidden;}
+.nav-open .main-menu {opacity: 1; visibility: visible; background: #FFFFFF; max-height: 100%!important; text-align: center; }
+.main-menu .nav li a{color:#2E2D2C; font-size: 3vh; font-weight:400; font-family:'Montserrat'; }
+.main-menu .nav li a:hover{ color:#00AEA5; font-size: 3vh; font-weight:400; font-family:'Montserrat'; }
+.main-menu .nav li{
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+    transform: translateY(-40px);
+    -webkit-animation-timing-function: cubic-bezier(.45,.005,0,1);
+    -moz-animation-timing-function: cubic-bezier(.45,.005,0,1);
+    -o-animation-timing-function: cubic-bezier(.45,.005,0,1);
+    animation-timing-function: cubic-bezier(.45,.005,0,1);
+}
+.nav-open .main-menu .nav li{
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-transition: -webkit-transform .2s,opacity .2s;
+    transition: transform .2s,opacity .2s;
+}
+.main-menu .nav li.delay-1{-webkit-transition-delay:0.1s; -moz-transition-delay:0.1s; -ms-transition-delay:0.1s; -o-transition-delay:0.1s; transition-delay:0.1s; }
+.main-menu .nav li.delay-2{-webkit-transition-delay:0.2s; -moz-transition-delay:0.2s; -ms-transition-delay:0.2s; -o-transition-delay:0.2s; transition-delay:0.2s; }
+.main-menu .nav li.delay-3{-webkit-transition-delay:0.3s; -moz-transition-delay:0.3s; -ms-transition-delay:0.3s; -o-transition-delay:0.3s; transition-delay:0.3s; }
+.main-menu .nav li.delay-4{-webkit-transition-delay:0.4s; -moz-transition-delay:0.4s; -ms-transition-delay:0.4s; -o-transition-delay:0.4s; transition-delay:0.4s; }
+.main-menu .nav li.delay-5{-webkit-transition-delay:0.5s; -moz-transition-delay:0.5s; -ms-transition-delay:0.5s; -o-transition-delay:0.5s; transition-delay:0.5s; }
+.main-menu .nav li.delay-6{-webkit-transition-delay:0.6s; -moz-transition-delay:0.6s; -ms-transition-delay:0.6s; -o-transition-delay:0.6s; transition-delay:0.6s; }
+.main-menu .nav li.delay-7{-webkit-transition-delay:0.7s; -moz-transition-delay:0.7s; -ms-transition-delay:0.7s; -o-transition-delay:0.7s; transition-delay:0.7s; }
+.main-menu .nav li.delay-8{-webkit-transition-delay:0.8s; -moz-transition-delay:0.8s; -ms-transition-delay:0.8s; -o-transition-delay:0.8s; transition-delay:0.8s; }
+.main-menu .nav li.delay-9{-webkit-transition-delay:0.9s; -moz-transition-delay:0.9s; -ms-transition-delay:0.9s; -o-transition-delay:0.9s; transition-delay:0.9s; }
+
+.nav-button{position: relative; z-index:1111; height:42px; display:block; width:50px; padding:12px; }
+.nav-button #nav-icon3{width:24px;height:22px;display:inline-block;position:relative;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg);-webkit-transition:.5s ease-in-out;-moz-transition:.5s ease-in-out;-o-transition:.5s ease-in-out;transition:.5s ease-in-out;cursor:pointer;}
+.nav-button #nav-icon3 span{display:block;position:absolute;height:3px;width:100%;background:#00AEA5;border-radius:5px;opacity:1;left:0;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg);-webkit-transition:.25s ease-in-out;-moz-transition:.25s ease-in-out;-o-transition:.25s ease-in-out;transition:.25s ease-in-out}
+.nav-button #nav-icon3 span:nth-child(1){top:0}
+.nav-button #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3){top:7px}
+.nav-button #nav-icon3 span:nth-child(4){top:14px}
+.nav-open #nav-icon3 span:nth-child(1){top:9px;width:0;left:50%}
+.nav-open #nav-icon3 span:nth-child(2){-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg)}
+.nav-open #nav-icon3 span:nth-child(3){-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);transform:rotate(-45deg)}
+.nav-open #nav-icon3 span:nth-child(4){top:9px;width:0;left:50%}
+
+.flex-center{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;height:100%}
+
+/*-- Responsive---------------------------------------------------------------- --*/
+@media screen and (max-width: 1200px){
+    .standard-menu ul li {
+        padding: 0 0 0 0.05em;
+    }
+    .btnlink{
+        font-size: 0.9em;
+    }
+    .ham{
+        visibility: hidden;
+        padding: 0px !important;
+        margin: 0px !important;
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .standard-menu ul li a{
+        font-family:'Montserrat';
+        color: #FFFFFF;
+        font-size: 0.85em;
+        margin: 0;
+    }
+    .ham{
+        visibility: hidden;
+        padding: 0px !important;
+        margin: 0px !important;
+        }
+    .btnlink{
+        visibility: visible;
+    }
+}
+@media screen and (max-width: 990px){
+    .standard-menu ul li a{
+        font-family:'Montserrat';
+        color: #FFFFFF;
+        font-size: 0em;
+        padding-left: 0.1em;
+        margin: 0;
+        visibility: hidden
+    }
+    .ham{
+        visibility: visible;
+        margin-top: 0em;
+    }
+    .dropdown-toggle{
+        visibility: hidden;
+    }
+}
+@media screen and (max-width: 490px){
+    .standard-menu ul li a{
+        padding-left: 0px;
+        visibility: hidden;
+    }
+    .nav-link{
+        padding: 0px !important;
+    }
 }
