--- a/css/main.css
+++ b/css/main.css
@@ -607,7 +607,6 @@ td, th {
   .primary-btn:hover {
     background: #00AEA5;
     color: #FFFFFF;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .section-title {
@@ -701,7 +700,6 @@ td, th {
   .details-btn:hover {
     width: 140px;
     background: #00AEA5;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
     .details-btn:hover .details {
       margin-left: 0;
@@ -712,15 +710,16 @@ td, th {
       color: #FFFFFF;
       font-weight: 600; }
 
-.default-header {
-  position: absolute;
-  top: 0;
-  left: 0;
+.slider-container {
+  padding-top: 100px;
+  padding-bottom: 10px; }
+  .slider-container .section-slider-title {
+    margin-bottom: 20px; }
+
+.bg-nav {
   width: 100%;
   max-height: 70%;
   z-index: 1000;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
   transition: 0.3s; }
 
 .btnlink {
@@ -729,22 +728,15 @@ td, th {
   color: #FFFFFF;
   font-size: 1.15em;
   margin: 0;
-  padding: 0; }
-
-.btnlink:hover {
-  color: #00AEA5 !important;
-  text-decoration: underline; }
+  padding: 0;
+  border-radius: 0px; }
 
 .dropdown-menu {
-  background: #00AEA5 !important; }
+  background: #00AEA5; }
 
 .dropdown-menu li a:hover {
-  background-color: #00AEA5;
   font-weight: 600;
   text-decoration: underline; }
-
-.dropdown-toggle {
-  visibility: visible; }
 
 .ham {
   visibility: hidden; }
@@ -753,16 +745,11 @@ td, th {
   margin-top: -0.25em; }
 
 .menu {
-  background-color: #2E2D2C; }
-
-#menu {
-  margin-top: 0.7em; }
+  background-color: #000000; }
 
 .nav-link:hover {
   color: #00AEA5 !important;
-  text-decoration: underline; }
-
-.link7:hover dropdown-menu {
+  text-decoration: underline;
   visibility: visible; }
 
 .standard-menu ul li {
@@ -772,12 +759,9 @@ td, th {
   line-height: .5em; }
 
 .standard-menu ul li a {
-  font-family: 'Montserrat';
+  font-family: "Montserrat", sans-serif;
   color: #FFFFFF;
   font-size: 1.15em; }
-
-.submenu {
-  color: #FFFFFF !important; }
 
 /*For mobile menu*/
 .main-menu {
@@ -790,104 +774,56 @@ td, th {
   opacity: 1;
   visibility: visible;
   background: #FFFFFF;
-  max-height: 100% !important;
+  max-height: 100%;
   text-align: center; }
 
 .main-menu .nav li a {
-  color: #2E2D2C;
+  color: #000000;
   font-size: 3vh;
   font-weight: 400;
-  font-family: 'Montserrat'; }
+  font-family: "Montserrat", sans-serif; }
 
 .main-menu .nav li a:hover {
   color: #00AEA5;
   font-size: 3vh;
   font-weight: 400;
-  font-family: 'Montserrat'; }
+  font-family: "Montserrat", sans-serif; }
 
 .main-menu .nav li {
   opacity: 0;
-  -webkit-transform: translateY(-40px);
-  -ms-transform: translateY(-40px);
   transform: translateY(-40px);
-  -webkit-animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1);
-  -moz-animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1);
-  -o-animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1);
   animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1); }
 
 .nav-open .main-menu .nav li {
   opacity: 1;
-  -webkit-transform: translateY(0px);
-  -ms-transform: translateY(0px);
   transform: translateY(0px);
-  -webkit-transition: -webkit-transform .2s,opacity .2s;
-  -webkit-transition: opacity .2s,-webkit-transform .2s;
-  transition: opacity .2s,-webkit-transform .2s;
-  -o-transition: transform .2s,opacity .2s;
-  transition: transform .2s,opacity .2s;
-  transition: transform .2s,opacity .2s,-webkit-transform .2s; }
+  transition: transform .2s,opacity .2s; }
 
 .main-menu .nav li.delay-1 {
-  -webkit-transition-delay: 0.1s;
-  -moz-transition-delay: 0.1s;
-  -ms-transition-delay: 0.1s;
-  -o-transition-delay: 0.1s;
   transition-delay: 0.1s; }
 
 .main-menu .nav li.delay-2 {
-  -webkit-transition-delay: 0.2s;
-  -moz-transition-delay: 0.2s;
-  -ms-transition-delay: 0.2s;
-  -o-transition-delay: 0.2s;
   transition-delay: 0.2s; }
 
 .main-menu .nav li.delay-3 {
-  -webkit-transition-delay: 0.3s;
-  -moz-transition-delay: 0.3s;
-  -ms-transition-delay: 0.3s;
-  -o-transition-delay: 0.3s;
   transition-delay: 0.3s; }
 
 .main-menu .nav li.delay-4 {
-  -webkit-transition-delay: 0.4s;
-  -moz-transition-delay: 0.4s;
-  -ms-transition-delay: 0.4s;
-  -o-transition-delay: 0.4s;
   transition-delay: 0.4s; }
 
 .main-menu .nav li.delay-5 {
-  -webkit-transition-delay: 0.5s;
-  -moz-transition-delay: 0.5s;
-  -ms-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
   transition-delay: 0.5s; }
 
 .main-menu .nav li.delay-6 {
-  -webkit-transition-delay: 0.6s;
-  -moz-transition-delay: 0.6s;
-  -ms-transition-delay: 0.6s;
-  -o-transition-delay: 0.6s;
   transition-delay: 0.6s; }
 
 .main-menu .nav li.delay-7 {
-  -webkit-transition-delay: 0.7s;
-  -moz-transition-delay: 0.7s;
-  -ms-transition-delay: 0.7s;
-  -o-transition-delay: 0.7s;
   transition-delay: 0.7s; }
 
 .main-menu .nav li.delay-8 {
-  -webkit-transition-delay: 0.8s;
-  -moz-transition-delay: 0.8s;
-  -ms-transition-delay: 0.8s;
-  -o-transition-delay: 0.8s;
   transition-delay: 0.8s; }
 
 .main-menu .nav li.delay-9 {
-  -webkit-transition-delay: 0.9s;
-  -moz-transition-delay: 0.9s;
-  -ms-transition-delay: 0.9s;
-  -o-transition-delay: 0.9s;
   transition-delay: 0.9s; }
 
 .nav-button {
@@ -903,14 +839,7 @@ td, th {
   height: 22px;
   display: inline-block;
   position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer; }
 
@@ -923,20 +852,14 @@ td, th {
   border-radius: 5px;
   opacity: 1;
   left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
   transition: .25s ease-in-out; }
 
 .nav-button #nav-icon3 span:nth-child(1) {
   top: 0; }
 
-.nav-button #nav-icon3 span:nth-child(2), #nav-icon3 span:nth-child(3) {
+.nav-button #nav-icon3 span:nth-child(2),
+#nav-icon3 span:nth-child(3) {
   top: 7px; }
 
 .nav-button #nav-icon3 span:nth-child(4) {
@@ -948,17 +871,9 @@ td, th {
   left: 50%; }
 
 .nav-open #nav-icon3 span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
   transform: rotate(45deg); }
 
 .nav-open #nav-icon3 span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg); }
 
 .nav-open #nav-icon3 span:nth-child(4) {
@@ -967,17 +882,8 @@ td, th {
   left: 50%; }
 
 .flex-center {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
   height: 100%; }
 
@@ -989,25 +895,25 @@ td, th {
     font-size: 0.9em; }
   .ham {
     visibility: hidden;
-    padding: 0px !important;
-    margin: 0px !important; } }
+    padding: 0px;
+    margin: 0px; } }
 
 @media screen and (max-width: 1000px) {
   .standard-menu ul li a {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     color: #FFFFFF;
     font-size: 0.85em;
     margin: 0; }
   .ham {
     visibility: hidden;
-    padding: 0px !important;
-    margin: 0px !important; }
+    padding: 0px;
+    margin: 0px; }
   .btnlink {
     visibility: visible; } }
 
 @media screen and (max-width: 990px) {
   .standard-menu ul li a {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     color: #FFFFFF;
     font-size: 0em;
     padding-left: 0.1em;
@@ -1024,7 +930,7 @@ td, th {
     padding-left: 0px;
     visibility: hidden; }
   .nav-link {
-    padding: 0px !important; } }
+    padding: 0px; } }
 
 .banner-area {
   background: url(../img/banner.jpg) no-repeat center center/cover; }
@@ -1120,8 +1026,6 @@ td, th {
   .single-filter-content .overlay-bg-content {
     background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
-    background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     text-align: center;
     padding: 50px 100px;
@@ -1351,7 +1255,6 @@ td, th {
   .single-input input:focus {
     outline: none;
     border: 1px solid transparent;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .single-input textarea {
@@ -1366,7 +1269,6 @@ td, th {
   .single-input textarea:focus {
     outline: none;
     border: 1px solid transparent;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .cta-area {
@@ -1433,16 +1335,13 @@ footer {
   footer .footer-container .footer-description,
   footer .footer-container .footer-links,
   footer .footer-container .footer-icon {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center; }
     footer .footer-container .footer-social p,
     footer .footer-container .footer-description p,
     footer .footer-container .footer-links p,
     footer .footer-container .footer-icon p {
+      color: #FFFFFF;
       margin-bottom: 0; }
     footer .footer-container .footer-social a,
     footer .footer-container .footer-description a,
